# monorepo-machine-config

./: .dir-locals.el  .envrc  .gitignore  .pre-commit-config.yaml  README.md  flake.nix  new_project.org  project.org
.dev/: pre-commit.nix  scopes
checks/: check-dns-replies.nix  default.nix
demo-merge-pattern/test-homelab/: README.md  flake.nix
demo-merge-pattern/test-private-modules/: flake.nix
demo-subflake/: README.md  flake.nix
flake-modules-prime/: README.md
flake-modules-prime/apprise-api/: package.nix
flake-modules-prime/arcticons/: package.nix
flake-modules-prime/dashboard-icons/: package.nix
flake-modules-prime/fava/: nixos-module.nix
flake-modules-prime/frigate-notify/: package.nix  remove-olm.patch
flake-modules-prime/ideavim/: home-manager-module.nix
flake-modules-prime/ipython/: ipython-fzf.py  package.nix
flake-modules/git/home-manager/conventional-commit-helper/src/: Cargo.toml
flake-modules/git/home-manager/conventional-commit-helper/src/src/: common.rs  main.rs  scopes.rs  types.json  types.rs
flake-modules/git/home-manager/conventional-commit-helper/src/tests/: cli.rs  test.rs
flake-modules/hyprland-helpers/src/: Cargo.toml
flake-modules/hyprland-helpers/src/hyprland-lang-notifier/: Cargo.toml
flake-modules/hyprland-helpers/src/hyprland-maybe-restart-hyprland-session/: Cargo.toml
flake-modules/hyprland-helpers/src/hyprland-maybe-restart-hyprland-session/src/: main.rs
flake-modules/hyprland-helpers/src/hyprland-mode-notifier/: Cargo.toml
flake-modules/hyprland-helpers/src/hyprland-mode-notifier/src/: main.rs
flake-modules/hyprland-helpers/src/hyprland-switch-lang-on-xremap/: Cargo.toml
flake-modules/hyprland-helpers/src/hyprland-switch-lang-on-xremap/src/: main.rs
flake-modules/hyprland-helpers/src/hyprland-workspace-notifier/: Cargo.toml
flake-modules/hyprland-helpers/src/hyprland-workspace-notifier/src/: main.rs
flake-modules/hyprland-helpers/src/scratch/: Cargo.toml
flake-modules/hyprland-helpers/src/scratch/src/: main.rs
homeConfigurations/: base.nix
homelab-subflake/: README.md  flake-lib.nix  flake.nix
hosts/uranium/: default.nix  (+1 more)
lib/: devshellCmds.nix  flake-module-loader.nix  homelab.nix  locallib.nix  mk-bkp.nix  mk-iscsi.nix
modules/: default.nix  fonts.nix  greeter.nix
nodes/: build-machine  deploy  start-deploy  yolo-deploy
templates/rust-general-proj/: .gitignore  Cargo.toml  flake.nix
templates/rust-general-proj/src/: main.rs
(+1097 files in other folders)
