[package]
name = "REPLACEME"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
metrics-exporter-prometheus = { version = "0.18", features = ["http-listener"] }
metrics = "0.24"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
