[package]
name = "semantic-commit-type-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
git2 = {version = "0.19.0", default-features = false }
log = "0.4.22"
regex = "1.11.1"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"

[dev-dependencies]
regex = "1.11.1"
rstest = "0.23.0"
testdir = "0.9.1"
